--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "A cross-platform music player for priavte purposes",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . WitherMusic --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=miha53cevic --version-string.FileDescription=CE --version-string.ProductName=\"WitherMusic\"",
+    "package-linux": "electron-packager . WitherMusic --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "author": "miha53cevic",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^7.1.2"
+    "electron": "^7.1.2",
+    "electron-packager": "^14.1.1"
   }
 }
