--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "electron": "^7.1.2",
     "electron-packager": "^14.1.1"
+  },
+  "dependencies": {
+    "electron-json-config": "^1.5.3"
   }
 }
