--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "withermusic",
   "version": "1.0.0",
   "description": "A cross-platform music player for priavte purposes",
-  "main": "main.js",
+  "main": "./src/main.js",
   "scripts": {
     "start": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
@@ -12,7 +12,7 @@
   "author": "miha53cevic",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^7.1.2",
+    "electron": "7.1.2",
     "electron-packager": "^14.1.1"
   },
   "dependencies": {
