--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-packager": "^14.1.1"
   },
   "dependencies": {
+    "custom-electron-titlebar": "^3.2.2-hotfix62",
     "electron-json-config": "^1.5.3"
   }
 }
